<resources>
    <string name="app_name">DeepLabV3Demo</string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="next">Next</string>
    <string name="select">Select</string>
    <string name="live">Live</string>
    <string name="segmentation_demo">Segmentation Demo</string>
    <string name="run_xnnpack">Run</string>
    <string name="reset">Reset</string>
    <string name="load_and_refresh">Load And Refresh</string>
    <string name="run">Run</string>
</resources>
