<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- ImageView at the top -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="405dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_view"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ProgressBar below ImageView -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Row 1: Next and Reset buttons side by side -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetImage"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/resetImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toEndOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <!-- Row 2: Single button spanning width of two above -->
    <Button
        android:id="@+id/loadAndRefreshButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_and_refresh"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Row 3: xnnpackButton Centered Run button -->
    <Button
        android:id="@+id/xnnpackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/run_xnnpack"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/loadAndRefreshButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
